--- a/src/main/resources/public/css/components/header.css
+++ b/src/main/resources/public/css/components/header.css
@@ -8,7 +8,8 @@
     margin-left: 10px;
 }
 
-.oz-header .logo-home img.logo {
+.oz-header .logo-home img.logo:after {
+    display: block;
     content: var(--logo-url);
     width: 160px;
 }
